--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Lab9P2_Equipo9
 excludes=
 file.reference.commons-lang-2.6.jar=C:\\Users\\harol\\OneDrive\\Escritorio\\Programacion 2\\Random\\recursos DBA\\UCanAccess-3.0.1-bin\\lib\\commons-lang-2.6.jar
+file.reference.commons-lang-2.6.jar-1=C:\\Users\\Valeria Romero\\Documents\\NetBeansProjects\\BasedeDatosS9_p2_12311132\\UCanAccess-3.0.1-bin\\lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Users\\harol\\OneDrive\\Escritorio\\Programacion 2\\Random\\recursos DBA\\UCanAccess-3.0.1-bin\\lib\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.1.jar-1=C:\\Users\\Valeria Romero\\Documents\\NetBeansProjects\\BasedeDatosS9_p2_12311132\\UCanAccess-3.0.1-bin\\lib\\commons-logging-1.1.1.jar
 file.reference.hsqldb.jar=C:\\Users\\harol\\OneDrive\\Escritorio\\Programacion 2\\Random\\recursos DBA\\UCanAccess-3.0.1-bin\\lib\\hsqldb.jar
+file.reference.hsqldb.jar-1=C:\\Users\\Valeria Romero\\Documents\\NetBeansProjects\\BasedeDatosS9_p2_12311132\\UCanAccess-3.0.1-bin\\lib\\hsqldb.jar
 file.reference.jackcess-2.1.2.jar=C:\\Users\\harol\\OneDrive\\Escritorio\\Programacion 2\\Random\\recursos DBA\\UCanAccess-3.0.1-bin\\lib\\jackcess-2.1.2.jar
+file.reference.jackcess-2.1.2.jar-1=C:\\Users\\Valeria Romero\\Documents\\NetBeansProjects\\BasedeDatosS9_p2_12311132\\UCanAccess-3.0.1-bin\\lib\\jackcess-2.1.2.jar
 file.reference.ucanaccess-3.0.1.jar=C:\\Users\\harol\\OneDrive\\Escritorio\\Programacion 2\\Random\\recursos DBA\\UCanAccess-3.0.1-bin\\ucanaccess-3.0.1.jar
+file.reference.ucanaccess-3.0.1.jar-1=C:\\Users\\Valeria Romero\\Documents\\NetBeansProjects\\BasedeDatosS9_p2_12311132\\UCanAccess-3.0.1-bin\\ucanaccess-3.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +50,12 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.hsqldb.jar}:\
-    ${file.reference.jackcess-2.1.2.jar}
+    ${file.reference.jackcess-2.1.2.jar}:\
+    ${file.reference.ucanaccess-3.0.1.jar-1}:\
+    ${file.reference.commons-lang-2.6.jar-1}:\
+    ${file.reference.commons-logging-1.1.1.jar-1}:\
+    ${file.reference.hsqldb.jar-1}:\
+    ${file.reference.jackcess-2.1.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
